2020-10-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove validations in:

          * widget_class->focus
          * widget_class->size_allocate
          * widget_class->size_request

2020-10-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Add ancillary unsigned new_width in function
      gtk_sheet_button_release_handler.

2020-10-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/gtksheet/gtksheetcolumn.h: Align argument columns.

    * src/gtksheet/gtksheet.c: Revise some debug outputs to utilize __func__
      macro. Reduce the scope of X and Y in gtk_sheet_button_release_handler
      use type unsigned integers for pointer cursor coordinates.

    * gtksheet/gtksheetcolumn.c: Use static cast in property handler; glib
      has already established the type of object and reformat switch case
      style. Reverse conditional logic in gtk_sheet_column_get_index and
      eliminate early return.

    * src/x_toolbars.c: Fix cast; GTK_TOOLBAR -> GEDA_TOOLBAR.

2020-10-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Add ancillary GdkWindow pointer in function
      gtk_sheet_realize_handler.

2020-10-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Rename gtksheet_signal_emit with an undescore;
      gtk_sheet_signal_emit and rename gtk_sheet_hide_active_cell without a
      leading underscore. Add ancillary offset in gtk_sheet_flash.

2020-10-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Clean code; update code style, fix indentations.
      Convert plain text to Doxygen documenation. Remove conditional definition
      of _gtk_sheet_draw_pixmap and eliminate unused GdkGC second argument.

2020-10-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove old debug code. Revise gtk_sheet_flash
      and gtk_sheet_extend_selection to utilize gdk_draw_pixmap instead of